# rtsp-client

./: .clang-format  .env  .gitignore  CPPLINT.cfg  Dockerfile  Doxyfile  Makefile  README.md  docker-compose.yml
install/apt/: general.apt  gstreamer.apt  nginx.apt  supervisord.apt
install/server/: nginx-default.conf  nginx.conf  supervisor.conf
rtsp-server/: Dockerfile  rtsp-server.py
rtsp-server/videos/: readme.txt
src/: ArcticMistMediaServer.cpp  CMakeLists.txt  Dockerfile  Makefile  Notes  README.md  RtspStreamSink.cpp  RtspStreamSink.h  arcticmist-media-server  main.cpp  ubuntu1404_x86.Dockerfile
src/config/: arcticmist-media-server  config.json  config_old.json
src/scripts/: fingerprint.py
